# compiler-algorithms

./: .gitignore  CMakeLists.txt  cfg.h  firstfollow.h  main.cpp  predictiveparsing.h  print.h
.dummycode/: convert_old.h  dfa_generic.h  nfa_generic.h
.github/: README.md  TODO
.github/workflows/: tests.yml
automatas/: dfa.h  nfa.h  test.h
include/: print.cpp  print.h
include/automatas/: convert.h  create.h  dfa.cpp  dfa.h  nfa.h  test.h
include/prettyprint/: print.cpp  print.h
src/automata/: dfa.cpp
src/preetyprint/: print.tpp
src/syntex_analysis/: cfg.h  parser.h
src/syntex_analysis/bottomupparser/: lr0parser.h
src/syntex_analysis/topdownparser/: predictiveparser.h  recursiveparser.h  topdowngrammar.h
syntex_analysis/: README.md  cfg.h  parser.h
syntex_analysis/bottomupparser/: augmentedgrammar.h  lr0parser.h
syntex_analysis/topdownparser/: firstfollow.h  predictiveparser.h  predictiveparsing.h  readme.md  recursiveparser.h  topdowngrammer.h
tests/: main.cpp  test.cpp
tests/automatas/: dfa.cpp  nfa.cpp  nfa_to_dfa.cpp
tests/expected_output/: dfa_out  nfa_out  nfatodfa_out
tests/inputs/: dfa_in  nfa_in  nfatodfa_in
